Fixed Undo buffer not syncing with GUI display.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 ﻿# CMakeList.txt : CMake project for nickolasddiazeditor, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+
+cmake_minimum_required (VERSION 3.10)
 add_definitions(-DUNICODE -D_UNICODE)
 set(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION 10.0.26100.0)
 set(WindowsSDK_LibDir "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.26100.0")
@@ -15,11 +14,11 @@ endif()
 
 project ("nickolasddiazeditor")
 
+
 # Add source to this project's executable.
-add_executable (nickolasddiazeditor WIN32 "nickolasddiaztexteditor.cpp" "DocumentText.cpp" "DocumentText.h" "TabControl.cpp" "TabControl.h" "TextEditor.cpp" "TextEditor.h")
+add_executable (nickolasddiazeditor WIN32 "nickolasddiaztexteditor.cpp" "DocumentText.cpp" "DocumentText.h" "TabControl.cpp" "TabControl.h" "TextEditor.cpp" "TextEditor.h" )
+target_link_libraries(nickolasddiazeditor PRIVATE comctl32)
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET nickolasddiazeditor PROPERTY CXX_STANDARD 20)
 endif()
-
-# TODO: Add tests and install targets if needed.
